# mmap_allocator

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  mmap_access_mode.h  mmap_allocator.h  mmap_exception.h  mmap_file_pool.cpp  mmap_file_pool.h  mmappable_vector.h  test_allocator.cpp  test_mmap_fixed.c
